# opticache

./: .gitignore  LICENSE  README-pypi.md  README.md  example.py  pyproject.toml
.github/workflows/: tests.yml
opticache/: __init__.py
opticache/strategies/: __init__.py  fifo.py  fifo_fast_delete.py  lfu.py  lru.py  sieve.py
optimization_tests/: fifo.py  lfu.py  lru.py  main.py  requirements.txt
pycache/: __init__.py  cache.py
pycache/strategies/: __init__.py  base.py  fifo.py  fifo_fast_delete.py  lfu.py  lru.py  mru.py  random.py  sieve.py
tests/: test_cache.py  test_eviction_strategies.py
